# ical2json

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
ical2json/: api.py  ical2json.py
