[tool.poetry]
name = "ical2json"
version = "0.1.0"
description = ""
authors = ["Björn Guth <bjoern.guth@aixigo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.4"
requests = "^2.28.2"
ical = "^4.5.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
